--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -42,7 +42,7 @@
     </div>
     <!-- 登入選單 -->
     <div class="nav_list_function_item_user l_inline" id="userMenu">
-        <div class="nav_list_function_item_select" ng-hide="user" ng-click="login()"><i class="fa fa-user"></i> 登入</div>
+        <div class="nav_list_function_item_select" ng-hide="user" ng-click="login()"><i class="fa fa-facebook"></i> 登入</div>
         <div class="tri-up" ng-class="{'nav_list_function_item_hide':!showUserMenu}" ng-show="user"></div>
         <div class="nav_list_function_item_select" ng-show="user" ng-click="toggleUserMenu()"><img class="user_profile_image" src="images/user.png"></div>
         <div class="nav_list_function_item_tooltip" ng-class="{'nav_list_function_item_hide':!showUserMenu}" ng-show="user" ng-click="logout()">
