--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -49,7 +49,7 @@ a {
   padding:8px;
   box-sizing: border-box;
   position: relative;
-  background: rgb(236,236,236);
+  /* background: rgb(236,236,236);*/
 
 }
 #content {
@@ -825,7 +825,12 @@ a.nav_item_sidebar:hover {
 .color_white {
   background: white;
 }
-
+.page_section {
+  background: url('../images/cover_banner.jpg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  padding-top: 50px;
+}
 .index_section {
   position: relative;
   padding-bottom: 30px;
@@ -1109,4 +1114,31 @@ input:checked + .slider::before {
 
 }
 
+/* ------------------------------------------------------------ */
+/* how to ask
+/* ------------------------------------------------------------ */
+.article_highlight {
+  background: rgb(255,255,153);
+}
+.article_img {
+  width: 200px;
+}
+.good_example {
+  border-left: 10px solid rgb(89,186,112);
+  padding: 5px 10px;
+  background: rgba(89,186,112,0.2);
+  margin-bottom: 2px;
 
+}
+.bad_example {
+  border-left: 10px solid rgb(214,90,90);
+  padding: 5px 10px;
+  background: rgba(214,90,90,0.2);
+  margin-bottom: 2px;
+
+}
+.quote {
+  border-left: 10px solid rgb(100,100,100);
+  padding: 5px 10px;
+  background: rgb(230,230,230);
+}
