--- a/public/ui/partials/footer.html
+++ b/public/ui/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="footer_link">
     <ul>
         <li class="footer_text"><a href="#">使用條款</a></li>
-        <li class="footer_text"><a href="#">發問指南</a></li>
+        <li class="footer_text"><a href="#/how-to-ask">發問指南</a></li>
         <li class="footer_text"><a href="#">聯絡我們</a></li>
     </ul>
     </div>
