--- a/public/ui/partials/footer.html
+++ b/public/ui/partials/footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="footer_link">
     <ul>
-        <li class="footer_text"><a href="#">使用條款</a></li>
+        <li class="footer_text"><a href="#/terms">使用條款</a></li>
         <li class="footer_text"><a href="#/how-to-ask">發問指南</a></li>
         <li class="footer_text"><a href="#">聯絡我們</a></li>
     </ul>
