add contact page

--- a/public/ui/partials/footer.html
+++ b/public/ui/partials/footer.html
@@ -3,7 +3,7 @@
     <ul>
         <li class="footer_text"><a href="#/terms">使用條款</a></li>
         <li class="footer_text"><a href="#/how-to-ask">發問指南</a></li>
-        <li class="footer_text"><a href="#">聯絡我們</a></li>
+        <li class="footer_text"><a href="#/contact">聯絡我們</a></li>
     </ul>
     </div>
     <div class="footer_logo">
