add footer link

--- a/public/ui/partials/footer.html
+++ b/public/ui/partials/footer.html
@@ -8,9 +8,9 @@
     </div>
     <div class="footer_logo">
     <ul>
-        <li class="footer_img"><img id="footer_apple" src="images/apple_logo.png"></li>
-        <li class="footer_img"><img id="footer_watchout" src="images/watchout_logo_black.png"></li>
-        <li class="footer_img"><img src="images/google_logo_color.png"></li>
+        <li class="footer_img"><a href="http://goo.gl/2vlnVR" target="_new"><img id="footer_apple" src="images/apple_logo.png"></a></li>
+        <li class="footer_img"><a href="http://goo.gl/du71aO" target="_new"><img id="footer_watchout" src="images/watchout_logo_black.png"></a></li>
+        <li class="footer_img"><a href="http://goo.gl/LB3KC9" target="_new"><img src="images/google_logo_color.png"></a></li>
     </ul>
     </div>
 </div>
