--- a/public/ui/partials/nav.html
+++ b/public/ui/partials/nav.html
@@ -17,7 +17,7 @@
 
 
   <div class="nav_list_toggle l_inline" ng-click="showsidebar('toggle')"><i class="fa fa-align-justify"></i></div>
-  <img src="images/watchout_logo.svg" id="watchout_nav_logo">
+  <!-- <img src="images/watchout_logo.svg" id="watchout_nav_logo"> -->
   <div class="nav_list_home" ng-click="go('.')">市長給問嗎! 最後一役</div>
 
   <div class="nav_list_function">
