--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -67,7 +67,7 @@ hr {
 /* footer
 /* ------------------------------------------------------------ */
 #footer {
-  margin: 10px 0px;
+  margin: 0px;
   padding: 5px;
   margin-top: 50px;
   background: #E0E0E0;
