--- a/public/ui/css/style.css
+++ b/public/ui/css/style.css
@@ -1121,29 +1121,31 @@ input:checked + .slider::before {
 /* how to ask
 /* ------------------------------------------------------------ */
 .article_highlight {
-  background: rgb(255,255,153);
+  font-weight: 700;
 }
 .article_img {
   width: 200px;
 }
 .good_example {
-  border-left: 10px solid rgb(89,186,112);
+  border-left: 10px solid #4CAF50;
   padding: 5px 10px;
-  background: rgba(89,186,112,0.2);
   margin-bottom: 2px;
-
+  background: white;
+  box-shadow: 0 0 6px rgba(0,0,0,.16),0 2px 6px rgba(0,0,0,.16);
+  
 }
 .bad_example {
-  border-left: 10px solid rgb(214,90,90);
+  border-left: 10px solid #F44336;
   padding: 5px 10px;
-  background: rgba(214,90,90,0.2);
+  background: white;
   margin-bottom: 2px;
-
+  box-shadow: 0 0 6px rgba(0,0,0,.16);
+  
 }
 .quote {
   border-left: 10px solid rgb(100,100,100);
   padding: 5px 10px;
-  background: rgb(230,230,230);
+  box-shadow: 0 0 6px rgba(0,0,0,.16),0 2px 6px rgba(0,0,0,.16);
 }
 
 /* ------------------------------------------------------------ */
