Navigation.js css adjust

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -664,6 +664,7 @@ a.nav_item_sidebar:hover {
   top: 13px;
   left: 60px;
   font-weight: 700;
+  color: white;
 }
 #watchout_nav_logo {
   width: 80px;
