--- a/demo/partials/candidate.html
+++ b/demo/partials/candidate.html
@@ -17,6 +17,7 @@
     <div ng-repeat="p in policy" class="md-whiteframe-z1 c_item l_inline v_top l_left" ng-click="go('policy/'+candidate.id+'/'+p.id)">
         <div class="c_indexTitle">{{p.indexTitle}}</div>
         <div class="c_title">{{p.title}}</div>
+        <div class="c_count">{{p.count}}</div>
     </div>
     </div>
 </div>
