--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -974,6 +974,9 @@ a.nav_item_sidebar:hover {
   .index_maintitle h1, .index_maintitle h3{
     text-align: left;
   }
+  .index_maintitle {
+    padding: 0px 20px 20px 0px;
+  }
 
 }
 .index_title {
@@ -1023,6 +1026,25 @@ a.nav_item_sidebar:hover {
 }
 .live-link {
   word-wrap: break-word;
+}
+.index_button {
+  -moz-transition: .2s;
+  -ms-transition: .2s;
+  -webkit-transition: .2s;
+  transition: .2s;
+  background: #db4437;
+  border-radius: 3px;
+  box-shadow: 0 2px 2px rgba(0,0,0,.2);
+  color: #fff;
+  display: inline-block;
+  font-size: 24px;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 12px 18px;
+  cursor: pointer;
+  min-width: 70px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 /* ------------------------------------------------------------ */
